--- a/ww_toolbar.info.yml
+++ b/ww_toolbar.info.yml
@@ -2,5 +2,5 @@ name: WW Toolbar
 type: module
 description: Provides a static toolbar independent of theme, similar to the admin toolbar
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: __ww__
